# PolygonTriangulation

./: .gitignore  CMakeLists.txt  Polygon.cpp  Polygon.h  main.cpp  tests
include/: Polygon.h
src/: main.cpp
test/: polygon_simple_tests.cpp
